# SmartFin

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/: ci-plan.md  context-map.md  development-flow.md  final-acceptance-summary.md  ingest-index-iteration.md  ingest-iteration.md  models.md  next-iteration-tasks.md  qa-iteration.md  report-iteration.md  retrieval-hybrid-iteration.md  retrieval-iteration.md  testing-skill.md
docs/templates/: iteration-template.md
scripts/: download_bge.ps1  export_commit_notes_cn.ps1  normalize_commit_message_cn.ps1  update_iteration_docs.ps1  validate_iteration_docs.ps1
src/finqa/: __init__.py  __main__.py  cli.py
src/finqa/common/: settings.py  types.py
src/finqa/indexing/: builder.py  embeddings.py
src/finqa/ingest/: __init__.py  pipeline.py
src/finqa/qa/: generator.py
src/finqa/report/: writer.py
src/finqa/retrieval/: __init__.py  hybrid.py
tests/: test_container_config.py  test_embeddings.py  test_ingest_index.py  test_qa_grounded.py  test_report_cli_encoding.py  test_report_writer.py  test_retrieval_hybrid.py  test_smoke.py
